; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/extr_interrupts_and_traps.c_check_syscall_vector.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/extr_interrupts_and_traps.c_check_syscall_vector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lguest = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_syscall_vector(%struct.lguest* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.lguest*, align 8
  %4 = alloca i32, align 4
  store %struct.lguest* %0, %struct.lguest** %3, align 8
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.lguest*, %struct.lguest** %3, align 8
  %7 = getelementptr inbounds %struct.lguest, %struct.lguest* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = call i64 @get_user(i32 %5, i32* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

13:                                               ; preds = %1
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @could_be_syscall(i32 %14)
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %13, %12
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i64 @get_user(i32, i32*) #1

declare dso_local i32 @could_be_syscall(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
